--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "styled-components": "^3.3.3"
   },
   "scripts": {
+    "predeploy": "yarn build-storybook",
+    "deploy": "gh-pages -d storybook-static",
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom",
@@ -49,6 +51,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react": "^7.9.1",
+    "gh-pages": "^1.2.0",
     "husky": "^1.0.0-rc.13",
     "jest-snapshot": "^23.4.1",
     "jest-styled-components": "^5.0.1",
