--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@storybook/addons": "^3.4.8",
     "@storybook/react": "^3.4.8",
     "babel-core": "^6.26.3",
+    "babel-eslint": "^9.0.0",
     "babel-plugin-require-context-hook": "^1.0.0",
     "babel-runtime": "^6.26.0",
     "concurrently": "^3.6.0",
